# did-extensions

./: .gitignore  .travis.yml  AADHAAR_KYC_SYSTEM_PRESENTATION.md  API_DEMO.md  API_ENDPOINTS_GUIDE.md  CITIZEN_WORKFLOW_REQUIREMENTS_ANALYSIS.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLETE_CITIZEN_WORKFLOW_GUIDE.md  CONTRIBUTING.md  CROSS_BLOCKCHAIN_VC_IMPLEMENTATION.md  DEPLOYMENT_SUMMARY.md  ECHIDNA  ECHIDNA-DISABLED  ECHIDNA-travis.yml  END_TO_END_FLOW_FIXES.md  FINAL_IMPLEMENTATION_SUMMARY.md  FULL_CITIZEN_WORKFLOW_IMPLEMENTATION_PLAN.md  MANUAL_RUN_GUIDE.md  NAMING.md  ONBOARDING.md  PORTAL_STATUS_REPORT.md  README.md  REPO-MAP.md  RUST_VC_SYSTEM_IMPLEMENTATION_SUMMARY.md  START_SYSTEM.md  SYSTEM_ARCHITECTURE.md  VC_REVOCATION_IMPLEMENTATION.md  VC_VIEWER_GUIDE.md  common.js  did-method-specification.md  did-pqie-context.jsonld  did-pqie-method-specification.md  did-pqie-w3c-registration.json  explorer.html  index.html  mana.json  package-lock.json  package.json  reset_system_data.py  (+9 more)
.github/: PULL_REQUEST_TEMPLATE.md
ccg-history/: CODEOWNERS
cddl/: README.md  accept.cddl  accept_example1.cbor  accept_example1.json  accept_example2.json  accept_example3.cbor  accept_example3.json  assertionMethod.cddl  assertionMethod_example7.cbor  assertionMethod_example7.json  authentication.cddl  authentication_example8.cbor  authentication_example8.json  authentication_example8b.cbor  authentication_example8b.json  capabilityDelegation.cddl  capabilityDelegation_example9.cbor  capabilityDelegation_example9.json  (+98 more)
rust_indy_core/: Cargo.toml
rust_indy_core/src/: lib.rs
(+532 files in other folders)
